--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,11 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# C# dosyaları ana dil olarak tanımlansın
+*.cs linguist-language=C#
+
+# Shader dosyaları sayılmasın (sadece örnek gibi kabul edilsin)
+*.shader linguist-vendored
+*.cginc linguist-vendored
+*.hlsl linguist-vendored
+
